fixed spacing on footer and stop horizontal scrollability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+  overflow-x: hidden;
   width: 100%;
   background: linear-gradient(
       347.86deg,
@@ -87,7 +88,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  margin-bottom: 8px;
+  margin-bottom: 0px;
 }
 
 #weather {
